--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -338,3 +338,61 @@ header {
 .footer-list-icon {
   fill: var(--contacts-color-secondary);
 }
+
+.footer-forms {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.footer-right {
+  margin-left: 80px;
+}
+
+.footer-input {
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  margin-right: 24px;
+}
+::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--third-color);
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  opacity: 0.8;
+}
+
+.footer-btn {
+  background-color: var(--brand-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  gap: 16px;
+  border-radius: 4px;
+  color: var(--third-color);
+}
+.footer-btn:hover,
+.footer-btn:focus {
+  background-color: var(--accent-color);
+}
+.footer-right-icon {
+  fill: currentColor;
+  width: 24px;
+  height: 24px;
+}
+
+.footer-right-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
