--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -379,6 +379,7 @@ header {
   gap: 16px;
   border-radius: 4px;
   color: var(--third-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-btn:hover,
 .footer-btn:focus {
