--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -356,6 +356,12 @@ header {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   margin-right: 24px;
+  padding-left: 16px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 ::placeholder {
   font-weight: 400;
@@ -363,7 +369,6 @@ header {
   line-height: 2;
   letter-spacing: 0.04em;
   color: var(--third-color);
-  padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
   opacity: 0.8;
